[package]
name = "http-live-reload-server"
version = "0.8.1"
authors = ["Brian Anderson <andersrb@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A simple static HTTP file server, for learning and local development"
homepage = "https://github.com/brson/basic-http-server"
repository = "https://github.com/brson/basic-http-server"
readme = "README.md"
edition = "2018"

[dependencies]
anyhow.version = "1.0.58"
bytes.version = "1.2.1"
extension-traits.version = "1.0.1"
futures.version = "0.3.21"
http.version = "0.2.8"
hyper.version = "0.14.20"
hyper.features = ["http1", "server", "stream", "tcp"]
local-ip-address.version = "0.4.6"
tokio.version = "1.19.2"
tokio.features = ["full"]
tokio-stream.version = "0.1.9"
tokio-stream.features = ["fs"]
tokio-tungstenite.version = "0.17.2"
tokio-util.version = "0.7.2"
tokio-util.features = ["codec"]

clap = "2.33.0"
comrak = "0.6.2"
derive_more = "0.15.0"
env_logger = "0.6.2"
handlebars = "1.1.0"
log = "0.4.8"
mime = "0.3.14"
mime_guess = "2.0.1"
percent-encoding = "2.1.0"
serde = { version = "1.0.102", features = ["derive"] }
structopt = "0.2.18"

[features]
